# dbschool

./: Attendance.cpp  Attendance.h  CMakeLists.txt  Configuration.cpp  Configuration.h  CustomComboBoxSortFilterProxyModel.cpp  CustomComboBoxSortFilterProxyModel.h  ForeignKeyDelegate.cpp  ForeignKeyDelegate.h  LastAttendanceDate.cpp  LastAttendanceDate.h  NetworkInteraction.cpp  NetworkInteraction.h  ProtocolDialog.cpp  ProtocolDialog.h  ProtocolWidget.cpp  ProtocolWidget.h  ReadOnlyDelegate.h  Readme.md  Worker.h  csvtablemodel.cpp  csvtablemodel.h  dbschool.toml  fix-qxlsx-for-mingw.patch  generateinvoices.cpp  generateinvoices.h  generateinvoices.ui  generatetables.cpp  generatetables.h  generatetables.ui  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  tableview.cpp  tableview.h  tablewidget.cpp  tablewidget.h  toolbarcalendarwidget.cpp  (+1 more)
.github/workflows/: cmake-multi-platform.yml
attendance/inbox/: readme.txt
attendance/outbox/: 0004-0111-20250819_113029.tsv  0005-0090-20250819_113029.tsv  0005-0099-20250819_113029.tsv  0006-0088-20250819_113029.tsv  0006-0089-20250819_113029.tsv  0009-0073-20250819_113029.tsv  0011-0066-20250819_113029.tsv  readme.txt
invoices/: readme.txt
translations/: dbschool1_ru.ts
